# Coulomb-Electric-Field

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
include/: ChargedParticle.hpp  Common.hpp  Exception.hpp  FPS.hpp  Field.hpp  VectorField.hpp
src/: ChargedParticle.cpp  Common.cpp  Exception.cpp  Field.cpp  VectorField.cpp
tests/: TestChargedParticle.cpp  TestMirror.cpp
